fix: document & embedding service unit tests